@@ -32,6 +32,8 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
+import com.google.common.collect.ImmutableMap;
+
 import static android.view.WindowManager.LayoutParams.LAYOUT_IN_DISPLAY_CUTOUT_MODE_DEFAULT;
 
 /**
@@ -135,7 +137,7 @@ public class LauncherActivityMetadata {
 
     /**
      * The display mode to use when launching the Trusted Web Activity. Possible values are
-     * "default", "immersive" and "sticky-immersive".
+     * "default", "immersive", "sticky-immersive", "minimal-ui", and "browser".
      */
     private static final String METADATA_DISPLAY_MODE =
             "android.support.customtabs.trusted.DISPLAY_MODE";
@@ -162,7 +164,7 @@ public class LauncherActivityMetadata {
     private static final String LAUNCH_HANDLER_CLIENT_MODE_METADATA_NAME
             = "android.support.customtabs.trusted.LAUNCH_HANDLER_CLIENT_MODE";
     private static final Map<String, Integer> LAUNCH_HANDLER_CLIENT_MODE_MAP =
-            Map.of(
+            ImmutableMap.of(
                     "navigate-existing", LaunchHandlerClientMode.NAVIGATE_EXISTING,
                     "focus-existing", LaunchHandlerClientMode.FOCUS_EXISTING,
                     "navigate-new", LaunchHandlerClientMode.NAVIGATE_NEW,
@@ -269,6 +271,12 @@ public class LauncherActivityMetadata {
         if ("sticky-immersive".equals(displayMode)) {
             return new TrustedWebActivityDisplayMode.ImmersiveMode(
                     true, LAYOUT_IN_DISPLAY_CUTOUT_MODE_DEFAULT);
+        }
+        if ("minimal-ui".equals(displayMode)) {
+            return new TrustedWebActivityDisplayMode.MinimalUiMode();
+        }
+        if ("browser".equals(displayMode)) {
+            return new TrustedWebActivityDisplayMode.BrowserMode();
         }
         return new TrustedWebActivityDisplayMode.DefaultMode();
     }
